--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,3 +1,23 @@
-.test {
-    background: pink;
+* {
+    margin: 0;
+    padding: 0;
+}
+.container {
+    box-sizing: border-box;
+    padding: 20px 10px;
+    border-bottom: 1px solid #ccc;
+
+}
+.item {
+    display: inline-block;
+    line-height: 22px;
+    color:#333;
+    font-size: 24px;
+    cursor: pointer;
+    text-decoration: none;
+    margin-left: 20px;
+    text-align: center;
+}
+.item:hover {
+    color: #999;
 }
