--- a/src/containers/Home/style.css
+++ b/src/containers/Home/style.css
@@ -1,8 +1,12 @@
-body {
-    background: red;
+
+
+.container {
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
-.test {
-    margin-top: 50px;
-    background: green;
+.item {
+    line-height: 30px;
+    font-size: 16px;
+    color: #666;
 }
